force-app/main/default/objects/CADMV_ExceptionLog__c/CADMV_ExceptionLog__c.object-meta.xml
<CustomObject>
    <label>Exception Log</label>
    <nameField>
        <displayFormat>EXC-{0000000}</displayFormat>
        <label>ExceptionLog Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Exception Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>