force-app/main/default/objects/CADMV_ExceptionLog__c/fields/CADMV_Browser__c.field-meta.xml
<CustomField>
    <fullName>CADMV_Browser__c</fullName>
    <label>Browser</label>
    <length>20</length>
    <type>Text</type>
</CustomField>