force-app/main/default/objects/CADMV_ExceptionLog__c/fields/CADMV_ClassMethod__c.field-meta.xml
<CustomField>
    <fullName>CADMV_ClassMethod__c</fullName>
    <label>Class Method</label>
    <length>50</length>
    <type>Text</type>
</CustomField>