force-app/main/default/objects/CADMV_ExceptionLog__c/fields/CADMV_ClassName__c.field-meta.xml
<CustomField>
    <fullName>CADMV_ClassName__c</fullName>
    <label>Class Name</label>
    <length>40</length>
    <type>Text</type>
</CustomField>