force-app/main/default/objects/CADMV_ExceptionLog__c/fields/CADMV_ComponentMethod__c.field-meta.xml
<CustomField>
    <fullName>CADMV_ComponentMethod__c</fullName>
    <label>Component Method</label>
    <length>50</length>
    <type>Text</type>
</CustomField>