force-app/main/default/objects/CADMV_ExceptionLog__c/fields/CADMV_ComponentName__c.field-meta.xml
<CustomField>
    <fullName>CADMV_ComponentName__c</fullName>
    <label>Component Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>