force-app/main/default/objects/CADMV_ExceptionLog__c/fields/CADMV_CPUTLimit__c.field-meta.xml
<CustomField>
    <fullName>CADMV_CPUTLimit__c</fullName>
    <label>CPUT Limit</label>
    <length>255</length>
    <type>Text</type>
</CustomField>