force-app/main/default/objects/CADMV_ExceptionLog__c/fields/CADMV_CreatedBy__c.field-meta.xml
<CustomField>
    <fullName>CADMV_CreatedBy__c</fullName>
    <defaultValue>$User.FirstName &amp; &apos; &apos; &amp; $User.LastName</defaultValue>
    <label>Created By</label>
    <length>50</length>
    <type>Text</type>
</CustomField>