force-app/main/default/objects/CADMV_ExceptionLog__c/fields/CADMV_Device__c.field-meta.xml
<CustomField>
    <fullName>CADMV_Device__c</fullName>
    <label>Device</label>
    <length>100</length>
    <type>Text</type>
</CustomField>