force-app/main/default/objects/CADMV_ExceptionLog__c/fields/CADMV_DMLimit__c.field-meta.xml
<CustomField>
    <fullName>CADMV_DMLimit__c</fullName>
    <label>DMLimit</label>
    <length>255</length>
    <type>Text</type>
</CustomField>