force-app/main/default/objects/CADMV_ExceptionLog__c/fields/CADMV_DMLStat__c.field-meta.xml
<CustomField>
    <fullName>CADMV_DMLStat__c</fullName>
    <label>DMLStat</label>
    <length>255</length>
    <type>Text</type>
</CustomField>