force-app/main/default/objects/CADMV_ExceptionLog__c/fields/CADMV_EndPointURL__c.field-meta.xml
<CustomField>
    <fullName>CADMV_EndPointURL__c</fullName>
    <label>End Point URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>