force-app/main/default/objects/CADMV_ExceptionLog__c/fields/CADMV_ErrorLogTime__c.field-meta.xml
<CustomField>
    <fullName>CADMV_ErrorLogTime__c</fullName>
    <defaultValue>now()</defaultValue>
    <label>Error Log Time</label>
    <type>DateTime</type>
</CustomField>