force-app/main/default/objects/CADMV_ExceptionLog__c/fields/CADMV_ErrorMessage__c.field-meta.xml
<CustomField>
    <fullName>CADMV_ErrorMessage__c</fullName>
    <label>Error Message</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>