force-app/main/default/objects/CADMV_ExceptionLog__c/fields/CADMV_ExceptionType__c.field-meta.xml
<CustomField>
    <fullName>CADMV_ExceptionType__c</fullName>
    <label>Exception Type</label>
    <length>100</length>
    <type>Text</type>
</CustomField>