force-app/main/default/objects/CADMV_ExceptionLog__c/fields/CADMV_Language__c.field-meta.xml
<CustomField>
    <fullName>CADMV_Language__c</fullName>
    <label>Language</label>
    <length>10</length>
    <type>Text</type>
</CustomField>