force-app/main/default/objects/CADMV_ExceptionLog__c/fields/CADMV_LineNumber__c.field-meta.xml
<CustomField>
    <fullName>CADMV_LineNumber__c</fullName>
    <label>LineNumber</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>