force-app/main/default/objects/CADMV_ExceptionLog__c/fields/CADMV_LogType__c.field-meta.xml
<CustomField>
    <fullName>CADMV_LogType__c</fullName>
    <label>Log Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>