force-app/main/default/objects/CADMV_ExceptionLog__c/fields/CADMV_Platform__c.field-meta.xml
<CustomField>
    <fullName>CADMV_Platform__c</fullName>
    <label>Platform</label>
    <length>30</length>
    <type>Text</type>
</CustomField>