force-app/main/default/objects/CADMV_ExceptionLog__c/fields/CADMV_QueryLimit__c.field-meta.xml
<CustomField>
    <fullName>CADMV_QueryLimit__c</fullName>
    <label>QueryLimit</label>
    <length>255</length>
    <type>Text</type>
</CustomField>