force-app/main/default/objects/CADMV_ExceptionLog__c/fields/CADMV_RespondedOn__c.field-meta.xml
<CustomField>
    <fullName>CADMV_RespondedOn__c</fullName>
    <label>Responded On</label>
    <length>40</length>
    <type>Text</type>
</CustomField>