force-app/main/default/objects/CADMV_ExceptionLog__c/fields/CADMV_SessionId__c.field-meta.xml
<CustomField>
    <fullName>CADMV_SessionId__c</fullName>
    <label>Session Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>