force-app/main/default/objects/CADMV_ExceptionLog__c/fields/CADMV_Source__c.field-meta.xml
<CustomField>
    <fullName>CADMV_Source__c</fullName>
    <label>Source</label>
    <length>255</length>
    <type>Text</type>
</CustomField>