force-app/main/default/objects/CADMV_ExceptionLog__c/fields/CADMV_SourceIPAddress__c.field-meta.xml
<CustomField>
    <fullName>CADMV_SourceIPAddress__c</fullName>
    <label>Source IP Address</label>
    <length>30</length>
    <type>Text</type>
</CustomField>