force-app/main/default/objects/CADMV_ExceptionLog__c/fields/CADMV_StackTrace__c.field-meta.xml
<CustomField>
    <fullName>CADMV_StackTrace__c</fullName>
    <label>Stack Trace</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>