force-app/main/default/objects/CADMV_ExceptionLog__c/fields/CADMV_TransactionName__c.field-meta.xml
<CustomField>
    <fullName>CADMV_TransactionName__c</fullName>
    <description>This field will capture transaction name, through which we can identify error records for a transaction</description>
    <label>Transaction Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>