force-app/main/default/objects/CADMV_ExceptionLog__c/fields/CADMV_UserEmail__c.field-meta.xml
<CustomField>
    <fullName>CADMV_UserEmail__c</fullName>
    <label>User Email</label>
    <length>255</length>
    <type>Text</type>
</CustomField>