force-app/main/default/objects/CADMV_ExceptionLog__c/fields/CADMV_UserName__c.field-meta.xml
<CustomField>
    <fullName>CADMV_UserName__c</fullName>
    <label>User Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>