force-app/main/default/objects/CADMV_ExceptionLog__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CADMV_ClassName__c</columns>
    <columns>CADMV_ClassMethod__c</columns>
    <columns>CADMV_ComponentName__c</columns>
    <columns>CADMV_ComponentMethod__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>